--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bebop Tech Help</title>
 </head>
+
 <body>
     
+    <div class="form-container">
+        <h2>Abertura de Chamado</h2>
+        <form id="chamadoForm">
+            <label for="nome">Nome:</label>
+            <input type="text" id="nome" name="nome" required>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="departamento">Departamento:</label>
+            <input type="text" id="departamento" name="departamento" required>
+
+            <label for="problema">Descrição do Problema:</label>
+            <textarea id="problema" name="problema" rows="4" required></textarea>
+
+            <button type="submit">Enviar Chamado</button>
+        </form>
+        <div class="message" id="mensagem"></div>
+    </div>
+
 </body>
+
 </html>
