--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bebop Tech Help</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
-    
+
     <div class="form-container">
         <h2>Abertura de Chamado</h2>
         <form id="chamadoForm">
