integrando o index.html ao script.js

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <div class="message" id="mensagem"></div>
     </div>
 
+    <script src="./assets/js/script.js"></script>
+
 </body>
 
 </html>
