--- a/index.html
+++ b/index.html
@@ -11,24 +11,39 @@
 
 <body>
 
-    <div class="form-container">
-        <h2>Abertura de Chamado</h2>
-        <form id="chamadoForm">
-            <label for="nome">Nome:</label>
-            <input type="text" id="nome" name="nome" required>
+    <div class="container">
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
+        <header>
 
-            <label for="departamento">Departamento:</label>
-            <input type="text" id="departamento" name="departamento" required>
+        </header>
 
-            <label for="problema">Descrição do Problema:</label>
-            <textarea id="problema" name="problema" rows="4" required></textarea>
+        <main>
+            <div class="form-container">
+                <h2>Abertura de Chamado</h2>
+                <form id="chamadoForm">
+                    <label for="nome">Nome:</label>
+                    <input type="text" id="nome" name="nome" required>
 
-            <button type="submit">Enviar Chamado</button>
-        </form>
-        <div class="message" id="mensagem"></div>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+
+                    <label for="departamento">Departamento:</label>
+                    <input type="text" id="departamento" name="departamento" required>
+
+                    <label for="problema">Descrição do Problema:</label>
+                    <textarea id="problema" name="problema" rows="4" required></textarea>
+
+                    <button type="submit">Enviar Chamado</button>
+                </form>
+                <div class="message" id="mensagem"></div>
+            </div>
+
+        </main>
+
+        <footer>
+            
+        </footer>
+
     </div>
 
     <script src="./assets/js/script.js"></script>
