add conteudo do header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div class="container">
 
         <header>
-
+            <h1>Bebop Tech Help</h1>
+            <p class="subtitulo">Simule a abertura de um chamado técnico</p>
         </header>
 
         <main>
@@ -41,7 +42,7 @@
         </main>
 
         <footer>
-            
+
         </footer>
 
     </div>
