add conteudo do footer (parte 1)

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </main>
 
         <footer>
-
+            <p>© 2025 Bebop Tech Help - Projeto Acadêmico UNIP</p>
         </footer>
 
     </div>
