add conteudo do footer (parte 2)

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
         <footer>
             <p>© 2025 Bebop Tech Help - Projeto Acadêmico UNIP</p>
+            <!-- <img src="./assets/images/banner.jpeg" alt="Banner Bebop Tech Help" class="banner"> -->
         </footer>
 
     </div>
