--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
         </header>
 
         <main>
-            
+            <form id="chamadoForm">
+                <label for="nome">Nome:</label>
+                <input type="text" id="nome" name="nome" required>
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>                
+            </form>
         </main>
 
         <footer>
