--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
                 <input type="text" id="nome" name="nome" required>
 
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>                
+                <input type="email" id="email" name="email" required>
+                
+                <label for="departamento">Departamento:</label>
+                <select id="departamento" name="departamento" required>
+                    <option value="">Selecione</option>
+                </select>
             </form>
         </main>
 
