add iopções para selecionar no campo Departamento do form (parte 2)

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
                     <option value="Notas">Tabelionato de Notas</option>
                     <option value="Caixa Registradora">Caixa Registradora</option>
                     <option value="Registro Civil">Registro Civil</option>
+                    <option value="">Selecione</option>
+                    <option value="Notas">Tabelionato de Notas</option>
+                    <option value="Caixa Registradora">Caixa Registradora</option>
+                    <option value="Registro Civil">Registro Civil</option>
                 </select>
             </form>
         </main>
