add button enviar no form e finalizando main content

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 
                 <label for="problema">Descrição do Problema:</label>
                 <textarea id="problema" name="problema" rows="4" required></textarea>
+
+                <button type="submit">Enviar Chamado</button>
+                <div id="mensagem" class="mensagem"></div>
             </form>
         </main>
 
