--- a/index.html
+++ b/index.html
@@ -29,13 +29,15 @@
                 <label for="departamento">Departamento:</label>
                 <select id="departamento" name="departamento" required>
                     <option value="">Selecione</option>
-                    <option value="Tabelionato de Notas">Tabelionato de Notas</option>
-                    <option value="Caixa Registradora">Caixa Registradora</option>
-                    <option value="Recurso Humanos">Recurso Humanos</option>
-                    <option value="Registro Civil">Registro Civil</option>
-                    <option value="Procuração">Procuração</option>
-                    <option value="Financeiro">Financeiro</option>
+                    <option value="imóvel">imóvel</option>
                     <option value="Inventário">Inventário</option>
+                    <option value="Financeiro">Financeiro</option>
+                    <option value="Procuração">Procuração</option>
+                    <option value="Registro Civil">Registro Civil</option>
+                    <option value="Recurso Humanos">Recurso Humanos</option>
+                    <option value="Caixa Registradora">Caixa Registradora</option>
+                    <option value="Tabelionato de Notas">Tabelionato de Notas</option>
+                    <option value="Assinatura Digital">Assinatura Digital (E-Notarido)</option>
                 </select>
 
                 <label for="problema">Descrição do Problema:</label>
