--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Bebop Tech Help - Abertura de Chamado</title>
     <link rel="stylesheet" href="./assets/css/resetcssmeyerweb.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="shortcut icon" href="./assets/images/bg_bbptch.PNG" type="image/x-icon">
 </head>
 
 <body>
